[package]
name = "gridsystem"
version = "0.1.0"
edition = "2024"
description = "A high-performance, parallel-capable 2D grid library."
license = "MIT"
repository = "https://github.com/jathn/gridsystem"
readme = "README.md"
keywords = ["grid", "2d", "parallel", "rayon"]
categories = ["data-structures", "concurrency"]

[dependencies]
rayon = "1.10"

[dev-dependencies]
rand = "0.9.2"
env_logger = "0.11"
log = "0.4"
